# password-manager

./: README.md  pyproject.toml
data/: vault.db
src/password_manager/: cli.py  crypto.py  db.py  generator.py  main.py  vault.py
src/password_manager.egg-info/: PKG-INFO  SOURCES.txt
