[buld-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "password-manager"
version = "0.1.0"
description = "A secure local password manager build in Python"
requires-python = ">=3.10"
dependencies = [
    "cryptography"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]